[gd_scene load_steps=5 format=3 uid="uid://b0ffab1ai2civ"]

[ext_resource type="PackedScene" uid="uid://cehtaf6cl2kmd" path="res://Scenes/ChessBoard/board.tscn" id="1_2b2l8"]
[ext_resource type="Texture2D" uid="uid://dufyd5ilbxng" path="res://Assets/chessThemes/board/set0/darkSquare.png" id="1_yea8g"]
[ext_resource type="Script" path="res://Scripts/Navigation/main_menu_bar.gd" id="2_elmi6"]
[ext_resource type="PackedScene" uid="uid://dxky2h281uega" path="res://Scenes/console.tscn" id="4_y6h4q"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yea8g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_elmi6")

[node name="Game" type="PopupMenu" parent="VBoxContainer/MainMenuBar"]
item_count = 5
item_0/text = "New Game"
item_1/text = "New Puzzle"
item_1/id = 1
item_2/text = "Load Position (FEN)"
item_2/id = 2
item_3/text = "Open Game (PGN)"
item_3/id = 3
item_4/text = "Hint"
item_4/id = 4

[node name="Account" type="PopupMenu" parent="VBoxContainer/MainMenuBar"]
auto_translate_mode = 1
item_count = 4
item_0/text = "Profile"
item_1/id = 1
item_1/separator = true
item_2/text = "Game Settings"
item_2/id = 2
item_3/text = "Sign In"
item_3/id = 3

[node name="Help" type="PopupMenu" parent="VBoxContainer/MainMenuBar"]
auto_translate_mode = 1
item_count = 2
item_0/text = "About"
item_1/text = "Support"
item_1/id = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Board" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_2b2l8")]
layout_mode = 2

[node name="Console" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_y6h4q")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="id_pressed" from="VBoxContainer/MainMenuBar/Game" to="VBoxContainer/MainMenuBar" method="_on_game_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MainMenuBar/Account" to="VBoxContainer/MainMenuBar" method="_on_account_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MainMenuBar/Help" to="VBoxContainer/MainMenuBar" method="_on_help_id_pressed"]
